--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "angular-aria": "^1.5.9",
     "angular-material": "^1.1.1",
     "toastr": "^2.1.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.0.0"
   }
 }
